# Chinese-metaphysics

./: .gitignore  README.md  pyproject.toml
docs/: DATA_MODELS.md  IA_AND_PAGES.md  PRD.md  PROJECT_STRUCTURE.md  ROADMAP.md  TECHNICAL_PLAN.md
metaphysics_app/: __init__.py  __main__.py  config.py  main.py
metaphysics_app/ai/: __init__.py  client.py  prompts.py  service.py
metaphysics_app/data/: __init__.py  database.py  repositories.py  schema.py
metaphysics_app/domain/: __init__.py  models.py
metaphysics_app/engines/: __init__.py  base.py
metaphysics_app/engines/almanac/: __init__.py  selector.py
metaphysics_app/engines/bazi/: __init__.py  calculator.py  calendar.py  constants.py
metaphysics_app/interpretation/: __init__.py  bazi_interpreter.py
metaphysics_app/services/: __init__.py  bazi_service.py  export_service.py
metaphysics_app/ui/: __init__.py  app.py  components.py  main_window.py  theme.py
metaphysics_app/ui/pages/: __init__.py  ai_page.py  almanac_page.py  bazi_input_page.py  history_page.py  home_page.py  profile_page.py  result_page.py  settings_page.py
metaphysics_app/utils/: serialization.py
tests/: test_ai_service.py  test_almanac_selector.py  test_bazi_workflow.py  test_main.py  test_persistence_and_export.py
