[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-metaphysics-app"
version = "0.1.0"
description = "Desktop Chinese metaphysics app focused on Bazi, interpretation, AI consultation, almanac date selection, and local history."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "XIAZHAN" }]
dependencies = []

[project.optional-dependencies]
desktop = [
  "PySide6>=6.7",
]
ai = [
  "openai>=1.0.0",
]
export = [
  "reportlab>=4.0",
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
metaphysics-app = "metaphysics_app.main:main"

[tool.setuptools.packages.find]
include = ["metaphysics_app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
